// Vitest Snapshot v1

exports[`Pagination renders correctly initially 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-28vum2"
        data-testid="paginationButtonContainer"
      >
        <button
          class="chakra-button button-pagination button-active css-1yujpbc"
          data-active=""
          type="button"
        >
          1
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          2
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          3
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          4
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          5
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          6
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          7
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          8
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          9
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          10
        </button>
        <button
          class="chakra-button button-pagination css-4xx2wk"
          type="button"
        >
          last
        </button>
        <div
          class="css-1y4kgfw"
        >
          <div
            class="chakra-form-control css-q5g1j5"
            role="group"
          >
            <label
              class="chakra-form__label css-uvho5g"
              for="limit"
              id="field-:r0:-label"
            >
              Limit
            </label>
            <div
              class="chakra-select__wrapper css-42b2qy"
            >
              <select
                class="chakra-select css-1ik61og"
                data-testid="paginationSelect"
                id="field-:r0:"
                name="limit"
              >
                <option
                  data-testid="setLimit10"
                  value="10"
                >
                  10
                </option>
                <option
                  data-testid="setLimit20"
                  value="20"
                >
                  20
                </option>
                <option
                  data-testid="setLimit30"
                  value="30"
                >
                  30
                </option>
                <option
                  data-testid="setLimit40"
                  value="40"
                >
                  40
                </option>
                <option
                  data-testid="setLimit50"
                  value="50"
                >
                  50
                </option>
              </select>
              <div
                class="chakra-select__icon-wrapper css-162mkon"
              >
                <svg
                  aria-hidden="true"
                  class="chakra-select__icon"
                  focusable="false"
                  role="presentation"
                  style="width: 1em; height: 1em; color: currentcolor;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="chakra-form-control css-dntb9e"
            role="group"
          >
            <label
              class="chakra-form__label css-uvho5g"
              for="gotopage"
              id="field-:r1:-label"
            >
              Go to page: 
            </label>
            <input
              class="chakra-input css-0"
              defaultvalue="1"
              id="field-:r1:"
            />
          </div>
          <div
            class="css-1a79dau"
            data-testid="paginationCurrentResults"
          >
            1
             - 
            10
             of 
            380
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-28vum2"
      data-testid="paginationButtonContainer"
    >
      <button
        class="chakra-button button-pagination button-active css-1yujpbc"
        data-active=""
        type="button"
      >
        1
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        2
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        3
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        4
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        5
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        6
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        7
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        8
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        9
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        10
      </button>
      <button
        class="chakra-button button-pagination css-4xx2wk"
        type="button"
      >
        last
      </button>
      <div
        class="css-1y4kgfw"
      >
        <div
          class="chakra-form-control css-q5g1j5"
          role="group"
        >
          <label
            class="chakra-form__label css-uvho5g"
            for="limit"
            id="field-:r0:-label"
          >
            Limit
          </label>
          <div
            class="chakra-select__wrapper css-42b2qy"
          >
            <select
              class="chakra-select css-1ik61og"
              data-testid="paginationSelect"
              id="field-:r0:"
              name="limit"
            >
              <option
                data-testid="setLimit10"
                value="10"
              >
                10
              </option>
              <option
                data-testid="setLimit20"
                value="20"
              >
                20
              </option>
              <option
                data-testid="setLimit30"
                value="30"
              >
                30
              </option>
              <option
                data-testid="setLimit40"
                value="40"
              >
                40
              </option>
              <option
                data-testid="setLimit50"
                value="50"
              >
                50
              </option>
            </select>
            <div
              class="chakra-select__icon-wrapper css-162mkon"
            >
              <svg
                aria-hidden="true"
                class="chakra-select__icon"
                focusable="false"
                role="presentation"
                style="width: 1em; height: 1em; color: currentcolor;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="chakra-form-control css-dntb9e"
          role="group"
        >
          <label
            class="chakra-form__label css-uvho5g"
            for="gotopage"
            id="field-:r1:-label"
          >
            Go to page: 
          </label>
          <input
            class="chakra-input css-0"
            defaultvalue="1"
            id="field-:r1:"
          />
        </div>
        <div
          class="css-1a79dau"
          data-testid="paginationCurrentResults"
        >
          1
           - 
          10
           of 
          380
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Pagination renders first and last buttons when on page 8 or higher 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-28vum2"
        data-testid="paginationButtonContainer"
      >
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          first
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          4
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          5
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          6
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          7
        </button>
        <button
          class="chakra-button button-pagination button-active css-1yujpbc"
          data-active=""
          type="button"
        >
          8
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          9
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          10
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          11
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          12
        </button>
        <button
          class="chakra-button button-pagination css-4xx2wk"
          type="button"
        >
          last
        </button>
        <div
          class="css-1y4kgfw"
        >
          <div
            class="chakra-form-control css-q5g1j5"
            role="group"
          >
            <label
              class="chakra-form__label css-uvho5g"
              for="limit"
              id="field-:r2:-label"
            >
              Limit
            </label>
            <div
              class="chakra-select__wrapper css-42b2qy"
            >
              <select
                class="chakra-select css-1ik61og"
                data-testid="paginationSelect"
                id="field-:r2:"
                name="limit"
              >
                <option
                  data-testid="setLimit10"
                  value="10"
                >
                  10
                </option>
                <option
                  data-testid="setLimit20"
                  value="20"
                >
                  20
                </option>
                <option
                  data-testid="setLimit30"
                  value="30"
                >
                  30
                </option>
                <option
                  data-testid="setLimit40"
                  value="40"
                >
                  40
                </option>
                <option
                  data-testid="setLimit50"
                  value="50"
                >
                  50
                </option>
              </select>
              <div
                class="chakra-select__icon-wrapper css-162mkon"
              >
                <svg
                  aria-hidden="true"
                  class="chakra-select__icon"
                  focusable="false"
                  role="presentation"
                  style="width: 1em; height: 1em; color: currentcolor;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="chakra-form-control css-dntb9e"
            role="group"
          >
            <label
              class="chakra-form__label css-uvho5g"
              for="gotopage"
              id="field-:r3:-label"
            >
              Go to page: 
            </label>
            <input
              class="chakra-input css-0"
              defaultvalue="8"
              id="field-:r3:"
            />
          </div>
          <div
            class="css-1a79dau"
            data-testid="paginationCurrentResults"
          >
            71
             - 
            80
             of 
            380
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-28vum2"
      data-testid="paginationButtonContainer"
    >
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        first
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        4
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        5
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        6
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        7
      </button>
      <button
        class="chakra-button button-pagination button-active css-1yujpbc"
        data-active=""
        type="button"
      >
        8
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        9
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        10
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        11
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        12
      </button>
      <button
        class="chakra-button button-pagination css-4xx2wk"
        type="button"
      >
        last
      </button>
      <div
        class="css-1y4kgfw"
      >
        <div
          class="chakra-form-control css-q5g1j5"
          role="group"
        >
          <label
            class="chakra-form__label css-uvho5g"
            for="limit"
            id="field-:r2:-label"
          >
            Limit
          </label>
          <div
            class="chakra-select__wrapper css-42b2qy"
          >
            <select
              class="chakra-select css-1ik61og"
              data-testid="paginationSelect"
              id="field-:r2:"
              name="limit"
            >
              <option
                data-testid="setLimit10"
                value="10"
              >
                10
              </option>
              <option
                data-testid="setLimit20"
                value="20"
              >
                20
              </option>
              <option
                data-testid="setLimit30"
                value="30"
              >
                30
              </option>
              <option
                data-testid="setLimit40"
                value="40"
              >
                40
              </option>
              <option
                data-testid="setLimit50"
                value="50"
              >
                50
              </option>
            </select>
            <div
              class="chakra-select__icon-wrapper css-162mkon"
            >
              <svg
                aria-hidden="true"
                class="chakra-select__icon"
                focusable="false"
                role="presentation"
                style="width: 1em; height: 1em; color: currentcolor;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="chakra-form-control css-dntb9e"
          role="group"
        >
          <label
            class="chakra-form__label css-uvho5g"
            for="gotopage"
            id="field-:r3:-label"
          >
            Go to page: 
          </label>
          <input
            class="chakra-input css-0"
            defaultvalue="8"
            id="field-:r3:"
          />
        </div>
        <div
          class="css-1a79dau"
          data-testid="paginationCurrentResults"
        >
          71
           - 
          80
           of 
          380
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`limit updates correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-28vum2"
        data-testid="paginationButtonContainer"
      >
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          first
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          4
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          5
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          6
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          7
        </button>
        <button
          class="chakra-button button-pagination button-active css-1yujpbc"
          data-active=""
          type="button"
        >
          8
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          9
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          10
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          11
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          12
        </button>
        <button
          class="chakra-button button-pagination css-4xx2wk"
          type="button"
        >
          last
        </button>
        <div
          class="css-1y4kgfw"
        >
          <div
            class="chakra-form-control css-q5g1j5"
            role="group"
          >
            <label
              class="chakra-form__label css-uvho5g"
              for="limit"
              id="field-:r6:-label"
            >
              Limit
            </label>
            <div
              class="chakra-select__wrapper css-42b2qy"
            >
              <select
                class="chakra-select css-1ik61og"
                data-testid="paginationSelect"
                id="field-:r6:"
                name="limit"
              >
                <option
                  data-testid="setLimit10"
                  value="10"
                >
                  10
                </option>
                <option
                  data-testid="setLimit20"
                  value="20"
                >
                  20
                </option>
                <option
                  data-testid="setLimit30"
                  value="30"
                >
                  30
                </option>
                <option
                  data-testid="setLimit40"
                  value="40"
                >
                  40
                </option>
                <option
                  data-testid="setLimit50"
                  value="50"
                >
                  50
                </option>
              </select>
              <div
                class="chakra-select__icon-wrapper css-162mkon"
              >
                <svg
                  aria-hidden="true"
                  class="chakra-select__icon"
                  focusable="false"
                  role="presentation"
                  style="width: 1em; height: 1em; color: currentcolor;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="chakra-form-control css-dntb9e"
            role="group"
          >
            <label
              class="chakra-form__label css-uvho5g"
              for="gotopage"
              id="field-:r7:-label"
            >
              Go to page: 
            </label>
            <input
              class="chakra-input css-0"
              defaultvalue="8"
              id="field-:r7:"
            />
          </div>
          <div
            class="css-1a79dau"
            data-testid="paginationCurrentResults"
          >
            141
             - 
            160
             of 
            251
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-28vum2"
      data-testid="paginationButtonContainer"
    >
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        first
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        4
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        5
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        6
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        7
      </button>
      <button
        class="chakra-button button-pagination button-active css-1yujpbc"
        data-active=""
        type="button"
      >
        8
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        9
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        10
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        11
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        12
      </button>
      <button
        class="chakra-button button-pagination css-4xx2wk"
        type="button"
      >
        last
      </button>
      <div
        class="css-1y4kgfw"
      >
        <div
          class="chakra-form-control css-q5g1j5"
          role="group"
        >
          <label
            class="chakra-form__label css-uvho5g"
            for="limit"
            id="field-:r6:-label"
          >
            Limit
          </label>
          <div
            class="chakra-select__wrapper css-42b2qy"
          >
            <select
              class="chakra-select css-1ik61og"
              data-testid="paginationSelect"
              id="field-:r6:"
              name="limit"
            >
              <option
                data-testid="setLimit10"
                value="10"
              >
                10
              </option>
              <option
                data-testid="setLimit20"
                value="20"
              >
                20
              </option>
              <option
                data-testid="setLimit30"
                value="30"
              >
                30
              </option>
              <option
                data-testid="setLimit40"
                value="40"
              >
                40
              </option>
              <option
                data-testid="setLimit50"
                value="50"
              >
                50
              </option>
            </select>
            <div
              class="chakra-select__icon-wrapper css-162mkon"
            >
              <svg
                aria-hidden="true"
                class="chakra-select__icon"
                focusable="false"
                role="presentation"
                style="width: 1em; height: 1em; color: currentcolor;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="chakra-form-control css-dntb9e"
          role="group"
        >
          <label
            class="chakra-form__label css-uvho5g"
            for="gotopage"
            id="field-:r7:-label"
          >
            Go to page: 
          </label>
          <input
            class="chakra-input css-0"
            defaultvalue="8"
            id="field-:r7:"
          />
        </div>
        <div
          class="css-1a79dau"
          data-testid="paginationCurrentResults"
        >
          141
           - 
          160
           of 
          251
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should automatically set last page if greater than last page is provided 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-28vum2"
        data-testid="paginationButtonContainer"
      >
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          first
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          11
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          12
        </button>
        <button
          class="chakra-button button-pagination button-active css-1yujpbc"
          data-active=""
          type="button"
        >
          13
        </button>
        <div
          class="css-1y4kgfw"
        >
          <div
            class="chakra-form-control css-q5g1j5"
            role="group"
          >
            <label
              class="chakra-form__label css-uvho5g"
              for="limit"
              id="field-:r8:-label"
            >
              Limit
            </label>
            <div
              class="chakra-select__wrapper css-42b2qy"
            >
              <select
                class="chakra-select css-1ik61og"
                data-testid="paginationSelect"
                id="field-:r8:"
                name="limit"
              >
                <option
                  data-testid="setLimit10"
                  value="10"
                >
                  10
                </option>
                <option
                  data-testid="setLimit20"
                  value="20"
                >
                  20
                </option>
                <option
                  data-testid="setLimit30"
                  value="30"
                >
                  30
                </option>
                <option
                  data-testid="setLimit40"
                  value="40"
                >
                  40
                </option>
                <option
                  data-testid="setLimit50"
                  value="50"
                >
                  50
                </option>
              </select>
              <div
                class="chakra-select__icon-wrapper css-162mkon"
              >
                <svg
                  aria-hidden="true"
                  class="chakra-select__icon"
                  focusable="false"
                  role="presentation"
                  style="width: 1em; height: 1em; color: currentcolor;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="chakra-form-control css-dntb9e"
            role="group"
          >
            <label
              class="chakra-form__label css-uvho5g"
              for="gotopage"
              id="field-:r9:-label"
            >
              Go to page: 
            </label>
            <input
              class="chakra-input css-0"
              defaultvalue="13"
              id="field-:r9:"
            />
          </div>
          <div
            class="css-1a79dau"
            data-testid="paginationCurrentResults"
          >
            281
             - 
            251
             of 
            251
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-28vum2"
      data-testid="paginationButtonContainer"
    >
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        first
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        11
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        12
      </button>
      <button
        class="chakra-button button-pagination button-active css-1yujpbc"
        data-active=""
        type="button"
      >
        13
      </button>
      <div
        class="css-1y4kgfw"
      >
        <div
          class="chakra-form-control css-q5g1j5"
          role="group"
        >
          <label
            class="chakra-form__label css-uvho5g"
            for="limit"
            id="field-:r8:-label"
          >
            Limit
          </label>
          <div
            class="chakra-select__wrapper css-42b2qy"
          >
            <select
              class="chakra-select css-1ik61og"
              data-testid="paginationSelect"
              id="field-:r8:"
              name="limit"
            >
              <option
                data-testid="setLimit10"
                value="10"
              >
                10
              </option>
              <option
                data-testid="setLimit20"
                value="20"
              >
                20
              </option>
              <option
                data-testid="setLimit30"
                value="30"
              >
                30
              </option>
              <option
                data-testid="setLimit40"
                value="40"
              >
                40
              </option>
              <option
                data-testid="setLimit50"
                value="50"
              >
                50
              </option>
            </select>
            <div
              class="chakra-select__icon-wrapper css-162mkon"
            >
              <svg
                aria-hidden="true"
                class="chakra-select__icon"
                focusable="false"
                role="presentation"
                style="width: 1em; height: 1em; color: currentcolor;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="chakra-form-control css-dntb9e"
          role="group"
        >
          <label
            class="chakra-form__label css-uvho5g"
            for="gotopage"
            id="field-:r9:-label"
          >
            Go to page: 
          </label>
          <input
            class="chakra-input css-0"
            defaultvalue="13"
            id="field-:r9:"
          />
        </div>
        <div
          class="css-1a79dau"
          data-testid="paginationCurrentResults"
        >
          281
           - 
          251
           of 
          251
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`shows correct number of buttons in relation to results 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-28vum2"
        data-testid="paginationButtonContainer"
      >
        <button
          class="chakra-button button-pagination button-active css-1yujpbc"
          data-active=""
          type="button"
        >
          1
        </button>
        <button
          class="chakra-button button-pagination css-1yujpbc"
          type="button"
        >
          2
        </button>
        <div
          class="css-1y4kgfw"
        >
          <div
            class="chakra-form-control css-q5g1j5"
            role="group"
          >
            <label
              class="chakra-form__label css-uvho5g"
              for="limit"
              id="field-:ra:-label"
            >
              Limit
            </label>
            <div
              class="chakra-select__wrapper css-42b2qy"
            >
              <select
                class="chakra-select css-1ik61og"
                data-testid="paginationSelect"
                id="field-:ra:"
                name="limit"
              >
                <option
                  data-testid="setLimit10"
                  value="10"
                >
                  10
                </option>
                <option
                  data-testid="setLimit20"
                  value="20"
                >
                  20
                </option>
                <option
                  data-testid="setLimit30"
                  value="30"
                >
                  30
                </option>
                <option
                  data-testid="setLimit40"
                  value="40"
                >
                  40
                </option>
                <option
                  data-testid="setLimit50"
                  value="50"
                >
                  50
                </option>
              </select>
              <div
                class="chakra-select__icon-wrapper css-162mkon"
              >
                <svg
                  aria-hidden="true"
                  class="chakra-select__icon"
                  focusable="false"
                  role="presentation"
                  style="width: 1em; height: 1em; color: currentcolor;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="chakra-form-control css-dntb9e"
            role="group"
          >
            <label
              class="chakra-form__label css-uvho5g"
              for="gotopage"
              id="field-:rb:-label"
            >
              Go to page: 
            </label>
            <input
              class="chakra-input css-0"
              defaultvalue="1"
              id="field-:rb:"
            />
          </div>
          <div
            class="css-1a79dau"
            data-testid="paginationCurrentResults"
          >
            1
             - 
            10
             of 
            20
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-28vum2"
      data-testid="paginationButtonContainer"
    >
      <button
        class="chakra-button button-pagination button-active css-1yujpbc"
        data-active=""
        type="button"
      >
        1
      </button>
      <button
        class="chakra-button button-pagination css-1yujpbc"
        type="button"
      >
        2
      </button>
      <div
        class="css-1y4kgfw"
      >
        <div
          class="chakra-form-control css-q5g1j5"
          role="group"
        >
          <label
            class="chakra-form__label css-uvho5g"
            for="limit"
            id="field-:ra:-label"
          >
            Limit
          </label>
          <div
            class="chakra-select__wrapper css-42b2qy"
          >
            <select
              class="chakra-select css-1ik61og"
              data-testid="paginationSelect"
              id="field-:ra:"
              name="limit"
            >
              <option
                data-testid="setLimit10"
                value="10"
              >
                10
              </option>
              <option
                data-testid="setLimit20"
                value="20"
              >
                20
              </option>
              <option
                data-testid="setLimit30"
                value="30"
              >
                30
              </option>
              <option
                data-testid="setLimit40"
                value="40"
              >
                40
              </option>
              <option
                data-testid="setLimit50"
                value="50"
              >
                50
              </option>
            </select>
            <div
              class="chakra-select__icon-wrapper css-162mkon"
            >
              <svg
                aria-hidden="true"
                class="chakra-select__icon"
                focusable="false"
                role="presentation"
                style="width: 1em; height: 1em; color: currentcolor;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="chakra-form-control css-dntb9e"
          role="group"
        >
          <label
            class="chakra-form__label css-uvho5g"
            for="gotopage"
            id="field-:rb:-label"
          >
            Go to page: 
          </label>
          <input
            class="chakra-input css-0"
            defaultvalue="1"
            id="field-:rb:"
          />
        </div>
        <div
          class="css-1a79dau"
          data-testid="paginationCurrentResults"
        >
          1
           - 
          10
           of 
          20
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
